deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-staging-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red-staging-app
  template:
    metadata:
      labels:
        app: red-staging-app
    spec:
      containers:
      - name: red-app-container
        image: dissolvedocker/red:staging1.4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
