load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-staging-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: red-staging-app
  ports:
   - name:  http
     protocol: TCP
     port: 80
     targetPort: 3000
   - name: https
     protocol: TCP
     port: 443
     targetPort: 3000
         #  externalTrafficPolicy: Cluster 
  externalIPs: 
   - 162.243.3.238
