red-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress

spec:
  tls:
    - hosts: 
       -        
      secretName: key-pair 
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: load-balancer
          servicePort: 80
